Update social media handle in ticker_v2.html

--- a/ticker_v2.html
+++ b/ticker_v2.html
@@ -113,8 +113,8 @@
   <div id="wrap" class="body" aria-label="Call to action con social">
     <span>Scrivi <span class="lead">!sub</span> o <span class="lead">!prime</span> per evitare le pubblicità</span>
     <span class="sep">|</span>
-    <span>Seguimi su</span>
-
+    <span class="lead">@MatteoTorinoFC</span>
+    
     <span class="dash">-</span>
 
     <span class="social" aria-label="Social links (icone)">
