Change font from Bebas Neue to Orbitron

--- a/intro.html
+++ b/intro.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Intro - Tra poco</title>
 
-  <!-- Google Font -->
+  <!-- Orbitron 900 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet">
 
   <style>
     :root{
@@ -16,13 +16,13 @@
       --granata-deep: #4e0010;
       --text: #ffffff;
 
-      /* durata totale per ciascuna scritta (come richiesto: 20s) */
+      /* 20s per cambio testo */
       --cycle-ms: 20000;
 
-      /* fade evidente */
+      /* fade bello visibile */
       --fade-ms: 1200;
 
-      /* zoom lento durante visibilità */
+      /* zoom lento */
       --zoom-from: 1;
       --zoom-to: 1.05;
     }
@@ -120,86 +120,71 @@
 
     .headline{
       margin:0;
-      font-family: "Bebas Neue", system-ui, sans-serif;
-      font-weight: 400;
+      font-family: "Orbitron", system-ui, sans-serif;
+      font-weight: 900;
+      font-size: clamp(44px, 6.5vw, 110px);
       letter-spacing: 0.06em;
-      font-size: clamp(56px, 7vw, 120px);
       line-height: 1.0;
       text-transform: uppercase;
-      text-shadow:
-        0 10px 30px rgba(0,0,0,0.38),
-        0 2px 0 rgba(0,0,0,0.14);
-    }
 
-    .sub{
-      margin-top: 14px;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      font-weight: 700;
-      font-size: clamp(14px, 1.6vw, 20px);
-      opacity: 0.9;
-      letter-spacing: 0.10em;
-      text-transform: uppercase;
-      text-shadow: 0 8px 24px rgba(0,0,0,0.28);
+      /* leggibilità senza blocchi */
+      text-shadow:
+        0 14px 38px rgba(0,0,0,0.40),
+        0 2px 0 rgba(0,0,0,0.12);
     }
 
     .swap{
-      display:inline-block;
       position:relative;
-      min-height: 1em; /* evita saltelli */
+      display:inline-block;
+      min-height: 1.1em; /* evita salto layout */
     }
 
-    /* Tutti i testi sovrapposti */
-    .swap span{
+    .swap .msg{
       position:absolute;
       left:50%;
       top:0;
-      white-space:nowrap;
-      opacity:0;
       transform: translate(-50%, 10px) scale(var(--zoom-from));
+      opacity:0;
+      white-space:nowrap;
+
+      transition:
+        opacity var(--fade-ms) ease,
+        transform var(--fade-ms) ease;
       will-change: opacity, transform;
     }
 
-    /* Questa classe fa partire la “timeline” (fade + zoom) */
-    .swap span.play{
-      animation: revealZoom var(--cycle-ms) linear forwards;
+    /* visibile (fade-in) */
+    .swap .msg.show{
+      opacity:1;
+      transform: translate(-50%, 0px) scale(var(--zoom-from));
     }
 
-    /* Timeline: fade-in -> hold -> fade-out, con zoom lento 1.00->1.05 */
-    @keyframes revealZoom{
-      /* partenza: invisibile e leggermente sotto */
-      0%{
-        opacity:0;
-        transform: translate(-50%, 12px) scale(var(--zoom-from));
-      }
-
-      /* fade in (circa 6% di 20s = ~1.2s) */
-      6%{
-        opacity:1;
-        transform: translate(-50%, 0px) scale(calc(var(--zoom-from) + 0.01));
-      }
-
-      /* hold lungo con zoom che continua */
-      92%{
-        opacity:1;
-        transform: translate(-50%, 0px) scale(var(--zoom-to));
-      }
-
-      /* fade out (ultimi ~1.6s circa, ma percepibile) */
-      100%{
-        opacity:0;
-        transform: translate(-50%, -10px) scale(var(--zoom-to));
-      }
+    /* fade-out (leggero up) */
+    .swap .msg.hide{
+      opacity:0;
+      transform: translate(-50%, -10px) scale(var(--zoom-to));
     }
 
-    @media (orientation: portrait){
-      .headline{ letter-spacing: 0.05em; }
-      .sub{ margin-top: 12px; }
+    /* zoom lento mentre è visibile */
+    .swap .msg.zooming{
+      animation: slowZoom linear forwards;
+      animation-duration: calc(var(--cycle-ms) - (var(--fade-ms) * 2));
     }
 
-    /* opzionale: riduce animazioni se sistema lo richiede */
+    @keyframes slowZoom{
+      0%   { transform: translate(-50%, 0px) scale(var(--zoom-from)); }
+      100% { transform: translate(-50%, 0px) scale(var(--zoom-to)); }
+    }
+
+    /* fallback: se niente JS, almeno la prima scritta resta visibile */
+    .swap .msg.default-on{
+      opacity:1;
+      transform: translate(-50%, 0px) scale(var(--zoom-from));
+    }
+
     @media (prefers-reduced-motion: reduce){
-      .pattern, .pattern::before { animation: none !important; }
-      .swap span.play { animation: none !important; opacity:1; transform: translate(-50%,0) scale(1); }
+      .pattern, .pattern::before { animation:none !important; }
+      .swap .msg { transition:none !important; animation:none !important; opacity:1; transform:translate(-50%,0) scale(1); }
     }
   </style>
 </head>
@@ -213,11 +198,11 @@
     <div class="content">
       <h1 class="headline">
         <span class="swap" id="swap">
-          <span>TRA POCO!</span>
-          <span>@MatteoTorinoFC</span>
+          <!-- prima scritta ON di default (così non “sparisce” mai) -->
+          <span class="msg default-on" data-i="0">TRA POCO!</span>
+          <span class="msg" data-i="1">@MatteoTorinoFC</span>
         </span>
       </h1>
-      <div class="sub">Restate con noi • Sta per iniziare</div>
     </div>
   </div>
 
@@ -225,29 +210,54 @@
     (function(){
       const root = document.documentElement;
       const swap = document.getElementById("swap");
-      const items = Array.from(swap.querySelectorAll("span"));
+      const items = Array.from(swap.querySelectorAll(".msg"));
 
       const CYCLE_MS = parseInt(getComputedStyle(root).getPropertyValue("--cycle-ms")) || 20000;
+      const FADE_MS  = parseInt(getComputedStyle(root).getPropertyValue("--fade-ms"))  || 1200;
+
+      // tempi: fade-in (FADE_MS) + hold/zoom (CYCLE-2*FADE) + fade-out (FADE_MS) = CYCLE
+      const HOLD_MS = Math.max(0, CYCLE_MS - (FADE_MS * 2));
 
       let idx = 0;
 
-      function play(i){
-        // reset di tutti
-        for (const el of items) el.classList.remove("play");
-
-        // forza reflow per riavviare l'animazione CSS in modo affidabile
-        void swap.offsetHeight;
-
-        items[i].classList.add("play");
+      function clearClasses(el){
+        el.classList.remove("default-on","show","hide","zooming");
       }
 
-      // start
-      play(idx);
+      function show(el){
+        clearClasses(el);
+        // reflow per riavviare animazione zoom in modo affidabile
+        void el.offsetWidth;
 
-      // ogni 20s passa al prossimo
+        el.classList.add("show");
+        // appena finito il fade-in, parte lo zoom lento
+        setTimeout(() => {
+          el.classList.add("zooming");
+        }, FADE_MS);
+      }
+
+      function hide(el){
+        el.classList.remove("show","zooming");
+        el.classList.add("hide");
+      }
+
+      // init robusto: forza il primo come show + zooming
+      items.forEach(clearClasses);
+      show(items[idx]);
+
       setInterval(() => {
-        idx = (idx + 1) % items.length;
-        play(idx);
+        const current = items[idx];
+        const next = items[(idx + 1) % items.length];
+
+        // parte fade-out alla fine della fase "hold"
+        setTimeout(() => hide(current), FADE_MS + HOLD_MS);
+
+        // switch: appena finito il fade-out
+        setTimeout(() => {
+          idx = (idx + 1) % items.length;
+          show(next);
+        }, CYCLE_MS);
+
       }, CYCLE_MS);
     })();
   </script>
